@@ -40,7 +40,7 @@ import java.util.Objects;
  * This class is thread-safe.
  */
 public final class ClientQuotaImage {
-    public static final ClientQuotaImage EMPTY = new ClientQuotaImage(Collections.emptyMap());
+    public static final ClientQuotaImage EMPTY = new ClientQuotaImage(Map.of());
 
     private final Map<String, Double> quotas;
 
@@ -102,8 +102,7 @@ public final class ClientQuotaImage {
 
     @Override
     public boolean equals(Object o) {
-        if (!(o instanceof ClientQuotaImage)) return false;
-        ClientQuotaImage other = (ClientQuotaImage) o;
+        if (!(o instanceof ClientQuotaImage other)) return false;
         return quotas.equals(other.quotas);
     }
 
